# PromptSentinel

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  README.zh-CN.md  SECURITY.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  security.yml
docs/: ARCHITECTURE.md  BENCHMARK-METHODOLOGY.md  ENGINEERING-REPORT.md  INTEGRATION.md  LLM-TOOLING.md  ML-AND-DATASETS.md  PRODUCTION-SECURITY.md  PROJECT-OVERVIEW.md  SECURITY-BOUNDARIES.md  THREAT_MODEL.md
examples/live-agent/: README.md  agent.py
portal/: .dockerignore  Dockerfile  README.md  app.py  corpus.json  guard.demo.yaml  requirements.txt
portal/static/: charts.js  dataset_eval.json  index.html  (+1 more)
sdks/python/: README.md  pyproject.toml
sdks/python/examples/: basic_usage.py  full_integration.py
sdks/python/promptsentinel/: __init__.py  client.py  models.py
sdks/python/tests/: test_client.py
service/: .dockerignore  Dockerfile  README.md  docker-compose.yml  production.config.yaml  pyproject.toml  requirements-ml.txt  requirements-pg2.txt  requirements.txt  sentinel.config.yaml  团队接入指南.md
service/app/: __init__.py  config.py  e2e_demo.py  engine.py  main.py  patterns.py  selfcheck.py  smoke_test.py
service/app/llm/: __init__.py  client.py  env.py
service/app/scanners/: __init__.py  base.py  llm_judge.py  ml_adapter.py  ml_classifier.py  onnx_guard.py
service/benchmark/: __init__.py  eval_dataset.py  eval_hybrid.json  eval_ml_compare.py  eval_pg2.py  eval_regex.json  gate.py  perf.py  run_benchmark.py
service/benchmark/datasets/: adversarial.jsonl  business_benign.jsonl  chinese_inject.jsonl  deepset_prompt_injections.jsonl  gandalf.jsonl  inthewild.jsonl  pii.jsonl  safeguard.jsonl
service/redteam/: __init__.py  corpus.py  llm_redteam.py  llm_redteam_report.json
service/tests/: conftest.py  test_api.py  test_config.py  test_corpus_benchmark.py  test_engine.py  test_ml_eval.py  test_patterns.py  test_scanners.py
(+36 files in other folders)
