[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptsentinel"
version = "1.0.0"
description = "Typed Python client SDK for the PromptSentinel self-hosted LLM prompt-security service."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "PromptSentinel" }]
keywords = ["llm", "prompt-injection", "security", "guardrails", "promptsentinel"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = ["httpx>=0.24"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/gitsrc/PromptSentinel"
Repository = "https://github.com/gitsrc/PromptSentinel"
Issues = "https://github.com/gitsrc/PromptSentinel/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["promptsentinel*"]

[tool.setuptools.package-data]
promptsentinel = ["py.typed"]
